--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Debug w_x86",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}\\build\\main.exe",
+            "program": "${workspaceFolder}\\build\\x86\\debug\\main.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
