--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,21 @@
         "sstream": "cpp",
         "tuple": "cpp",
         "utility": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "chrono": "cpp",
+        "cstddef": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp",
+        "string_view": "cpp",
+        "cinttypes": "cpp",
+        "variant": "cpp"
     },
     "editor.fontSize": 13,
     "editor.renderWhitespace": "all",
